# pothole-community-map-

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci-api.yml  ci-ml.yml  ci-web.yml
api/: README.md
api/app/: __init__.py  main.py
api/app/core/: config.py  logging.py  security.py
api/app/db/: base.py  session.py
api/app/repositories/: detections_repo.py  events_repo.py  media_repo.py  reviews_repo.py
api/app/schemas/: common.py  detections.py  media.py  pothole_events.py  reviews.py  uploads.py
api/app/services/: clustering_service.py  detection_service.py  event_service.py  geotag_service.py  map_service.py  review_service.py  (+1 more)
api/tests/: test_events.py  test_health.py  test_map.py  test_uploads.py
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_SCHEMA.md  DECISIONS.md  EVALUATION_PLAN.md  MODEL_NOTES.md  MVP.md  PROJECT_SCOPE.md
ml/: README.md
ml/configs/: inference.yaml  train_yolov8n.yaml  train_yolov8s.yaml
ml/notebooks/: 00_data_ingest.ipynb  02_train_detector.ipynb
ml/scripts/: convert_to_yolo.py  deduplicate_events.py  download_datasets.py  evaluate.py  export_geojson.py  geotag.py  infer_images.py  infer_video.py  merge_datasets.py  train.py
ml/src/: __init__.py  clustering.py  datasets.py  evaluator.py  geospatial.py  inference.py  trainer.py  transforms.py  utils.py
scripts/: bootstrap.sh  export_map_data.sh  run_api.sh  run_web.sh  run_worker.sh  train_model.sh
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx
(+35 files in other folders)
