[project]
name = "pothole-community-map"
version = "0.1.0"
description = "Community pothole detection and live mapping system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "geojson>=3.0.0",
    "scikit-learn>=1.4.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests"]
